Set fixed width for stories page filter scrollbar.

--- a/themes/custom/mat/sass/pages/_storiesapi.scss
+++ b/themes/custom/mat/sass/pages/_storiesapi.scss
@@ -1071,6 +1071,7 @@ $mobile-item-size: 100px;
         .dropdown-inner {
           height: 0;
           margin-top: 50px;
+          width: 85px;
           padding-bottom: 50px;
           border-top-left-radius: $border-radius-base;
           border-top-right-radius: $border-radius-base;
